Fix scrollbar corners.

--- a/_hollywood-postfix.scss
+++ b/_hollywood-postfix.scss
@@ -103,6 +103,10 @@
 
 @import url('../node_modules/highlight.js/styles/agate.css');
 
+@function asset($path) {
+    @return url("#{asset_path($path)}")
+}
+
 #ban_logo {
     background-image: url('./assets/logo_white.svg');
 }
